<resources>
    <string name="app_name">Mortgage</string>
    <string name="hello_world">This is a simple computing Mortgage Application</string>
    <string name="action_settings">Settings</string>

    <!-- User input item -->
    <string name="name">Name</string>
    <string name="Purchase">Purchase Price ($) </string>
    <string name="DownPayment">Down Payment (%) </string>
    <string name="MortgageTerm">Mortgage Term (years)</string>
    <string name="InterestRate">Interest Rate (%)</string>
    <string name="PropertyTax">Property Tax ($ per year)</string>
    <string name="PropertyInsurance">Property Insurance ($ per year)</string>
    <string name="PMI"> PMI 0.52%</string>
    <string name="ZIP">ZIP Code</string>
    <string name="FirstPayDate">First Payment Date</string>

    <!--UI String -->
    <string name="Save">Save</string>
    <string name="TotalMonttlyPay">Totally Monthly Payment</string>
    <string name="TotalP">Total Payment</string>
    <string name="POD">Pay-off Date</string>
    <string name="LOGTIME">Log Time</string>
    <string name="AddNew">Add New MortGage</string>
    <string name="title_activity_add__mortgage">add_Mortgage</string>
    <string name="AddNewMortgage">Add New Mortgage</string>
    <string-array name="monthlist">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="yearlist">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string name="title_activity_veiw_result_">VeiwResult_Activity</string>

</resources>
