<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zhengyu.mortgage.UI.Add_Mortgage">

    <TextView android:text="@string/AddNewMortgage" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/titletext"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"/>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titletext"
        android:layout_weight="1">
        <LinearLayout android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/titletext"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:padding="5dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editname"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/purchaseprice"
                android:hint="@string/Purchase"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Downpayment"
                android:hint="@string/DownPayment"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Mortgageterm"
                android:hint="@string/MortgageTerm"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Interestrate"
                android:hint="@string/InterestRate"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Propertytax"
                android:hint="@string/PropertyTax"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Propertyinsurance"
                android:hint="@string/PropertyInsurance"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zip"
                android:hint="@string/ZIP"
                android:inputType="numberDecimal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PMI"
                android:text="@string/PMI"
                android:autoText="false"
                android:textSize="18dp" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:verticalScrollbarPosition="left"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yeartext"
                    android:text="@string/FirstPayDate"
                    android:textSize="15dp"
                    />
                <Spinner

                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/monthlist"
                    android:id="@+id/montylist">
                </Spinner>
                <Spinner
                    android:id="@+id/yearlist"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/yearlist"
                    >
                </Spinner>
                </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/adddata"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AddNew"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
