<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zhengyu.mortgage.UI.VeiwResult_Activity">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/view_Name"
        />

        <TextView
            android:layout_below="@id/view_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DisplayMonth"/>
        <TextView
            android:layout_below="@id/DisplayMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalmonthly"
            android:text="@string/TotalMonttlyPay"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_below="@id/totalmonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DisplayTotal"
            />
        <TextView
            android:layout_below="@id/DisplayTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            android:text="@string/TotalP"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_below="@id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Displayoffday"/>
        <TextView
            android:layout_below="@id/Displayoffday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dayoff"
            android:text="@string/POD"/>

</RelativeLayout>
